# whatsbot

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
app/api/: api.py
app/api/endpoints/: whatsbot.py
app/config/: log_config.py  twilio_config.py
app/core/: twilio_config.py
app/db/: db_connect.py  db_operations.py
app/pydantic_models/: build_objects.py  pydantic_models.py
app/schemas/: build_objects.py  pydantic_models.py
app/services/: message_manager.py
app/utils/: validate.py
config/: end_tunnel.sh
database_models/: database_models.py  pyproject.toml
exceptions/: exceptions.py
scripts/: commands.py  end_tunnel.sh  start_tunnel.sh
tools/database_manager/: Makefile  pyproject.toml
tools/database_manager/alembic/: env.py
tools/database_manager/alembic/versions/: 7dd673d4b101_add_clients_and_sessions_table.py  a3a6902af95d_add_table_clients.py  d208d1bb99c6_add_column_message_type.py
utils/: validate.py
