[tool.poetry]
name = "whatsbot"
version = "0.1.0"
description = ""
authors = ["Arthur <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pytest = "^8.3.2"
twilio = "8.5.0"
python-dotenv = "^1.0.1"
SQLAlchemy = "^2.0.31"
pg8000 = "^1.16.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
