[tool.poetry]
name = "database_models"
version = "0.1.0"
description = ""
authors = ["Arthur <arp.arthur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true