[tool.poetry]
name = "database-manager"
version = "0.1.0"
description = ""
authors = ["Arthur <arp.arthur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
